new pages + layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <img src="SIGDIAL2015logo.png" width="860">
 </div>
 
-<div style="float:left">
+<div style="float:left;margin-right:10px">
 
 <table border="0" width="160" cellpadding="8">
   {% include navbar.html %}
@@ -50,15 +50,6 @@
 </div>
 
 {{ content }}
-
-
-<!--
- <iframe name="main_frame" frameborder="no" width="700" height="2000" src="main.htm" scrolling="no">
-	Your browser does not support inline frames or is currently 
-	configured not to display inline frames.
-</iframe>
--->
-
 
 </body></html>
 
