--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
 <img src="SIGDIAL2015logo.png" width="860">
 </div>
 
-<div style="float:left;margin-right:10px">
+<div style="float:left;width:170px">
 
-<table border="0" width="160" cellpadding="8">
+<table border="0" width="160" cellpadding="8" style="margin-right:10px">
   {% include navbar.html %}
 
     <tr>
@@ -49,7 +49,11 @@
 
 </div>
 
+<div style="float:right;width:690px">
+
 {{ content }}
+
+</div>
 
 </body></html>
 
