--- a/sigdial.css
+++ b/sigdial.css
@@ -5,3 +5,9 @@ body  {font-family:Arial; width: 860px; margin: 0 auto; font-size: 11pt}
 h1 {font-size: 18pt}
 h2 {font-size: 12pt}
 h3 {font-size: 11pt}
+table {
+    border-collapse: collapse;
+}
+table, th, td {
+    border: 1px solid black;
+}
