--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
 <div style="float:left;width:170px">
 
-<table border="0" width="160" cellpadding="8" style="margin-right:10px">
+<table border="0" width="160" cellpadding="8" style="margin-right:10px" class="menu">
   {% include navbar.html %}
 
     <tr>
