--- a/sigdial.css
+++ b/sigdial.css
@@ -1,4 +1,3 @@
-
 body  {font-family:Arial; width: 860px; margin: 0 auto; font-size: 11pt}
 #menuitem {color: white; background:#888888; text-align:center}
 #menuitem>a {color: white; text-decoration: none}
@@ -8,6 +7,14 @@ h3 {font-size: 11pt}
 table {
     border-collapse: collapse;
 }
-table, th, td {
+td {
     border: 1px solid black;
+	font-size: 11pt;
+}
+table.menu  td {
+    border: 2px solid white;
+	padding: 8px
+}
+td {
+	padding:5px;
 }
