--- a/sigdial.css
+++ b/sigdial.css
@@ -16,14 +16,14 @@ table.menu  td {
 	padding: 8px
 }
 
-table.papers {
-	border: none;
-	font-size: 90%;
-}
+#table.papers {
+#	border: none;
+#	font-size: 90%;
+#}
 
-table.papers tr,td {
-	border: none;
-}
+#table.papers tr,td {
+#	border: none;
+#}
 
 td {
 	padding:5px;
