fixed - accepted papers

--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <title>SIGDIAL 2015</title>
 <link rel="stylesheet" type="text/css" href="sigdial.css">
-<style type="text/css"><!-
+<style type="text/css"><!--
 table.papers {
 	border: none;
 	font-size: 90%;
