--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -8,7 +8,7 @@
   <tr>
     <td height="60" width="108" align="center">
       <a href="{{ entry.url }}">
-        <img alt="{{ entry.name }}" border="0" src="{{ entry.logo }}">
+        <img alt="{{ entry.name }}" border="0" src="{{ entry.logo }}" width="100">
       </a>
     </td>
   </tr>
